--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@ title: Latest posts
   <h1>Lastest news</h1>
   <ul class="posts unstyled">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span class="post_date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
