--- a/news.html
+++ b/news.html
@@ -3,11 +3,17 @@ layout: default
 title: Latest posts
 ---
 
-<div id="home">
+<div class="container">
+  <div class="row">
+    <div class="span10">
+
   <h1>Lastest news</h1>
-  <ul class="posts unstyled">
+  <ul class="well unstyled">
     {% for post in site.posts %}
-      <li><span class="post_date badge badge-inverse">{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><h4><span class="post_date badge badge-inverse">{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></h4></li>
     {% endfor %}
   </ul>
+
+    </div>
+  </div>
 </div>
