--- a/news.html
+++ b/news.html
@@ -5,15 +5,13 @@ title: Latest posts
 
 <div class="container">
   <div class="row">
-    <div class="span10">
-
-  <h1>Lastest news</h1>
-  <ul class="well unstyled">
-    {% for post in site.posts %}
-      <li><h4><span class="post_date badge badge-inverse">{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></h4></li>
-    {% endfor %}
-  </ul>
-
+    <div class="span10 offset1">
+      <h1>Lastest news</h1>
+      <ul class="well unstyled">
+        {% for post in site.posts %}
+          <li><h4><span class="post_date badge badge-inverse">{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></h4></li>
+        {% endfor %}
+      </ul>
     </div>
   </div>
 </div>
