Make sure the img have an alt attribute.

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@ title: ~Nemoworld~
              <div class="container">
                <div class="row">
                  <div class="span3">
-                   <img src="/img/Halloween.png" /> <span class="badge">Halloween 2012</span> - since 09/2012
+                   <img alt="Halloween Icon" src="/img/Halloween.png" /> <span class="badge">Halloween 2012</span> - since 09/2012
                    <br /><a href="https://github.com/nrdufour/dropping-spider/">https://github.com/nrdufour/dropping-spider/</a>
                    <blockquote>Little dropping spider triggered by anybody passing by ;-). Powered by arduino and Adafruit devices.</blockquote>
                  </div>
                  <div class="span3">
-                   <img src="/img/refuge-32x32.jpg" /> <span class="badge">Refuge</span> - since 2011
+                   <img alt="Refuge logo Icon" src="/img/refuge-32x32.jpg" /> <span class="badge">Refuge</span> - since 2011
                    <br /><a href="http://refuge.io/">http://refuge.io/</a>
                    <blockquote>Aims to provide a fully decentralized and opensource data platform allowing to exchange data, process/render it and follow its life (translinks and links).</blockquote>
                  </div>
                  <div class="span3">
-                   <img src="/img/similar2.png" /> <span class="badge">Similar</span> - since 05/2009
+                   <img alt="Similar project icon" src="/img/similar2.png" /> <span class="badge">Similar</span> - since 05/2009
                    <br /><a href="https://github.com/nrdufour/similar/">https://github.com/nrdufour/similar/</a>
                    <blockquote>Distributed Discrete Event Simulation Engine written in Erlang.</blockquote>
                  </div>
@@ -56,13 +56,13 @@ title: ~Nemoworld~
        </div>
      </div>
      <div class="well span2">
-       <img src="/img/capnemo.png" class="img-polaroid" /> <br /> <br />
-       <img src="/img/refuge-32x32.jpg" /> <a href="http://io.nemoworld.info/_utils">Local Refuge</a><br />
-       <img src="https://github.com/favicon.ico" /> <a href="http://www.github.com/nrdufour">Github</a><br />
-       <img src="/img/socialmediaicons/twitter-32x32.png" /> <a href="http://www.twitter.com/nrdufour">Twitter</a><br />
-       <img src="/img/socialmediaicons/facebook-32x32.png" /> <a href="http://www.facebook.com/nrdufour">Facebook</a><br />
-       <img src="/img/socialmediaicons/linkedin-32x32.png" /> <a href="http://www.linkedin.com/in/nrdufour">LinkedIn</a><br />
-       <img src="/img/socialmediaicons/flickr-32x32.png" /> <a href="http://www.flickr.com/photos/nrdufour/">Flickr</a>
+       <img alt="CapNemo face manga image" src="/img/capnemo.png" class="img-polaroid" /> <br /> <br />
+       <img alt="Refuge icon" src="/img/refuge-32x32.jpg" /> <a href="http://io.nemoworld.info/_utils">Local Refuge</a><br />
+       <img alt="github icon" src="https://github.com/favicon.ico" /> <a href="http://www.github.com/nrdufour">Github</a><br />
+       <img alt="twitter icon" src="/img/socialmediaicons/twitter-32x32.png" /> <a href="http://www.twitter.com/nrdufour">Twitter</a><br />
+       <img alt="facebook icon" src="/img/socialmediaicons/facebook-32x32.png" /> <a href="http://www.facebook.com/nrdufour">Facebook</a><br />
+       <img alt="linkedin icon" src="/img/socialmediaicons/linkedin-32x32.png" /> <a href="http://www.linkedin.com/in/nrdufour">LinkedIn</a><br />
+       <img alt="flickr icon" src="/img/socialmediaicons/flickr-32x32.png" /> <a href="http://www.flickr.com/photos/nrdufour/">Flickr</a>
      </div>
    </div>
 </div>
